# ansible-beautiful-output

./: pyproject.toml
callback_plugins/: beautiful_output.py
